# RouteFinderDemo

./: README.md  package-lock.json  package.json
backend/: .env  .env.example  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  env.example  main.py  pyproject.toml  task-def.json  taskdef.json  vcpkg.json
backend/src/: CMakeLists.txt  calculateRoutes.cpp  crow_all.h  main.cpp
frontend/frontend/: .env  index.html  package-lock.json  package.json
frontend/frontend/public/Car1/: AnimatedCar1.jsx  Car1.jsx  car1.gltf
frontend/frontend/public/Car2/: AnimatedCar2.jsx  Car2.jsx
frontend/frontend/public/People/: People.jsx  people.gltf
frontend/frontend/public/People/Boy/: boy.gltf
frontend/frontend/public/People/Girl/: girl.gltf
frontend/frontend/public/People/Man/: AnimatedPeople.jsx  Man.jsx  man.gltf
frontend/frontend/public/People/OldMan/: OldMan.gltf
frontend/frontend/public/People/OldWoman/: OldWoman.gltf
frontend/frontend/public/People/Woman/: Woman.gltf
frontend/frontend/src/: App.css  App.jsx  ButtonGrid.jsx  Car.css  Car1Scene.jsx  Car2Scene.jsx  CarGrid.jsx  ErrorCard.jsx  GetRoute.jsx  Landing.css  Landing.jsx  Loader.jsx  MainApp.jsx  MapSearch.jsx  PadButton.jsx  PassengerScene.jsx  ThreeCarLayer.jsx  TimeButton.jsx  createPassengerLayer.jsx  fetch.css  fetch.jsx  index.css  main.jsx  shortenAddress.jsx
frontend/frontend/src/assets/: RightArrow.jsx
